Fix stretching image on Safari

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ body {
   overflow-y: hidden;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .bag-img-base {
